--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
         padding: 0% 24px;
     font-size: 24px;    
     }
-    .cabecalho {background-color: rgba(255, 255, 255, 0.366);color: white; 
+    .cabecalho {background-color: rgba(300, 300, 300, 0.390);color: rgb(255, 234, 0); 
         display:flex;
     justify-content: space-around; padding: 2% 24px;}
     .cabecalho-imagem{width: 5%;}
