--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
         padding: 0% 24px;
     font-size: 24px;    
     }
-    .cabecalho {background-color: rgba(250, 250, 250, 0.390);color: rgb(255, 234, 0); 
+    .cabecalho {background-color: rgb(255, 217, 0);color: rgb(255, 132, 0); 
         display:flex;
     justify-content: space-around; padding: 2% 24px;}
     .cabecalho-imagem{width: 15%;}
